# bitplusplus

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md
include/bit-helper/: bit.h  bit_vector.h
include/bitplusplus/: bit.h  bit_vector.h  enum.h
tests/: CMakeLists.txt
tests/src/: bit_tests.cc  bit_tests.cpp  bit_vector_test.cc
